<resources>
    <string name="app_name">fidarc</string>
    <string name="title_account">Account</string>
    <string name="title_maps">Maps</string>
    <string name="title_scan">Scan</string>
    <string name="map_text">You can find our partners on the map !</string>
    <string name="account_text">Your account</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_email">Email</string>
    <string name="text_log_out">Log out</string>
    <string name="text_fidelity_cards">Your fidelity cards</string>
    <string name="company_name">Company Name</string>
    <string name="number_of_points">Number of points :  </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="wrong_password">Wrong password or username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="message_to_user">Message to user</string>
    <string name="text_qrCode_display">Please show this QRCode to our partner to get your fidelity point !</string>
    <string name="register_text">You can create an account on <a href="https://fidarc.srvz-webapp.he-arc.ch/">FidArc Website</a></string>
    <string name="title_activity_barcode_scanning">BarcodeScanningActivity</string>
    <string name="title_activity_scan_company">ScanCompanyActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_company_information">Company information</string>
    <string name="text_company_name">Company name</string>
    <string name="text_company_description">Company description</string>
    <string name="text_number_of_point">Number of points</string>
    <string name="text_card_color">Card color</string>
    <string name="text_message_to_user">Message to user</string>
    <string name="first_name_label">First name : </string>
    <string name="company_name_label">Name : </string>
    <string name="company_description_label">Description : </string>
    <string name="number_of_points_label">Number of points : </string>
    <string name="message_to_user_label">Message to user : </string>
    <string name="last_name_label">Last name : </string>
    <string name="email_company_label">Email : </string>
</resources>
