<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/fidelityCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/FidelityCardTextColor"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/messageToUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_to_user"
            android:textSize="20sp"
            android:textColor="@color/FidelityCardTextColor"/>

        <TextView
            android:id="@+id/nbFidelityPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_points"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/FidelityCardTextColor"/>
    </LinearLayout>

</RelativeLayout>